fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -415,5 +415,5 @@ nav li {
 }
 .footer-wrapper { 
     display: flex;
-    justify-content: baseline;
+    align-items: baseline;
 }
